# bbterm

./: .gitignore  README.md  animation_test.py  canvas.py  errors.py  font.py  main.py  protocol.py  pyproject.toml  run.py  sprites.py  telnet_client.py
bbterm/: canvas.py  debug_utils.py  font.py  inline_font.py  main.py  protocol.py  sprites.py  telnet_client.py
bbterm/extensions/: ansi.py  slash.py
extensions/: __init__.py  slash.py
src/bbterm/: animation_test.py  canvas.py  main.py  protocol.py
src/bbterm/extensions/: __init__.py
